change image name

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   surstromming:
-    image: surstromming
+    image: hadv83/surstromming
     container_name: surstromming
     stdin_open: true
     tty: true
